--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap" rel="stylesheet">
   <link href="./cascade.css" rel="stylesheet" />
   
   <title>Kalyane Martins MakeUp</title>
@@ -10,9 +11,65 @@
 <body>
   <div class="container">
     <div class="content">
-      <img class="imagem" src="./image/kaly.jpeg" />
-      <div class="opacity"></div>
-      
+      <img class="imagem" src="./image/background.jpg" />
+      <div class="opacity">
+        <img class="logo-top" src="./image/K Roxo - sem fundo.png" />
+        <div class="block">
+          <h3 class="title">Sobrancelhas:</h3>
+          <div class="line">
+            <span class="service">Designer de sobrancelhas</span>
+            <span class="service">R$ 30,00</span>
+          </div>
+          <div class="line">
+            <span class="service">Henna</span>
+            <span class="service">R$ 40,00</span>
+          </div>
+          <div class="line">
+            <span class="service">Buço</span>
+            <span class="service">R$ 12,00</span>
+          </div>
+        </div>
+        <div class="block">
+          <h3 class="title">Maquiagem:</h3>
+          <div class="line">
+            <span class="service">Maquiagem Express</span>
+            <span class="service">R$ 90,00</span>
+          </div>
+          <div class="line">
+            <span class="service">Maquiagem Social</span>
+            <span class="service">R$ 120,00</span>
+          </div>
+          <div class="line">
+            <span class="service">Maquiagem para Noivas</span>
+            <span class="service">(Solicitar orçamento)</span>
+          </div>
+          <div class="line">
+            <span class="service">Maquiagem artística</span>
+            <span class="service">(Solicitar orçamento)</span>
+          </div>
+        </div>
+        <div class="block">
+          <h3 class="title">Cursos <br />Curso de Automaquiagem:</h3>
+          <div class="line">
+            <span class="service">Individual</span>
+            <span class="service">R$ 150,00</span>
+          </div>
+          <div class="line">
+            <span class="service">Duplas</span>
+            <span class="service">R$ 250,00</span>
+          </div>
+          <h3 class="title">Profissional:</h3>
+          <div class="line">
+            <span class="service">Curso profissional iniciante</span>
+            <span class="service">(Solicitar orçamento)</span>
+          </div>
+          <div class="line">
+            <span class="service">Curso profissional de <br />aperfeiçoamento</span>
+            <span class="service">(Solicitar orçamento)</span>
+          </div>
+        </div>
+        <img class="logo-bottom" src="./image/Kalyane Logo Bottom.png" />
+      </div>
     </div>
   </div>
 </body>
