--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
       <img class="imagem" src="./image/background.jpg" />
       <div class="opacity">
-        <img class="logo-top" src="./image/K Roxo - sem fundo.png" />
+        <img class="logo-top" src="./image/logo-topo.png" />
         <div class="block">
           <h3 class="title">Sobrancelhas:</h3>
           <div class="line">
@@ -68,7 +68,7 @@
             <span class="service">(Solicitar orçamento)</span>
           </div>
         </div>
-        <img class="logo-bottom" src="./image/Kalyane Logo Bottom.png" />
+        <img class="logo-bottom" src="./image/logo-footer.png" />
       </div>
     </div>
   </div>
