--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="block">
-          <h3 class="title">Cursos <br />Curso de Automaquiagem:</h3>
+          <h3 class="title">Curso de Automaquiagem:</h3>
           <div class="line">
             <span class="service">Individual</span>
             <span class="service">R$ 150,00</span>
@@ -58,13 +58,13 @@
             <span class="service">Duplas</span>
             <span class="service">R$ 250,00</span>
           </div>
-          <h3 class="title">Profissional:</h3>
+          <h3 class="title">Cursos Profissionais:</h3>
           <div class="line">
-            <span class="service">Curso profissional iniciante</span>
+            <span class="service">Iniciante</span>
             <span class="service">(Solicitar orçamento)</span>
           </div>
           <div class="line">
-            <span class="service">Curso profissional de <br />aperfeiçoamento</span>
+            <span class="service">Aperfeiçoamento</span>
             <span class="service">(Solicitar orçamento)</span>
           </div>
         </div>
